labs/lab1/testsuite/bad/numbers.cc
int main() { 1 2 3; }
